styles/main.css
:root {
    --primary-reaction-color: hsl(0, 100%, 67%);
    --primary-memory-color: hsl(39, 100%, 56%);
    --primary-verbal-color: hsl(166, 100%, 37%);
    --primary-visual-color: hsl(234, 85%, 45%);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: "Hanken Grotesk", sans-serif;
    font-size: 1rem;
}

.container {
    background-color: white;
}

main {
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 100vw;
}

.overall-result > h2, .your-result > h1 {
    color: white;
}

.your-result > h1 {
    font-size: 3rem;
}
.your-result > p {
    font-size: 1rem;
    color: hsl(241, 100%, 89%);
}

.overall-result {
    background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
    height: 40%;
    width: 100%;
    border-radius: 0 0 25px 25px;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    gap: 1rem;
    color: hsl(241, 100%, 89%);
    padding: 1rem;
}

.result-description {
    padding: 0 2rem 0 2rem;
}

.your-result {
    background: linear-gradient(hsla(256, 72%, 46%, 1), hsla(241, 72%, 46%, 0));
    border-radius: 50%;
    width: 8rem;
    height: 8rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.result-summary > h3 {
    margin-bottom: 1rem;
}

.result-summary {
    height: 60%;
    width: 100%;
    display: flex;
    flex-direction: column;
    padding: 2rem;
    gap: 1rem;
}

.category {
    display: flex;
    justify-content: space-between;
    background-color: gray;
    border-radius: 0.5rem;
    height: 4rem;
    padding: 1rem;
    font-weight: 700;
}

.category-name {
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

.score {
    display: flex;
    gap: 0.6rem;
    align-items: center;
    justify-content: center;
}

.your-score {
    color: hsl(224, 30%, 27%);
}

.max-score {
    color: hsla(224, 30%, 27%, 0.5);
}

#reaction {
    background-color: hsla(0, 100%, 67%, 0.1);
    color: var(--primary-reaction-color);
}
#memory {
    background-color: hsla(39, 100%, 56%, 0.1);
    color: var(--primary-memory-color);
}
#verbal {
    background-color: hsla(166, 100%, 37%, 0.1);
    color: var(--primary-verbal-color);
}
#visual {
    background-color: hsla(234, 85%, 45%, 0.1);
    color: var(--primary-visual-color);
}

button {
    height: 4rem;
    border-radius: 2rem;
    border: none;
    color: white;
    font-size: 1.5rem;
    font-weight: 700;
    background-color: hsl(224, 30%, 27%);
    margin-top: 1rem;
}
button:hover, button:focus {
    cursor: pointer;
    background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
}

@media (min-width: 48rem) {
    body {
        background-color: hsl(221, 100%, 96%);
        min-height: 100vh;
    }

    .container {
        height: 30rem;
        width: 40rem;
        border-radius: 2rem;
    }

    main {
        display: flex;
        flex-direction: row;
        height: 100%;
        width: 100%;
    }

    .your-result > h1 {
        font-size: 4rem;
    }
    
    .overall-result > h2{
        font-size: 2rem;
    }

    .overall-result > h3 {
        font-size: 1.5rem;
    }

    .overall-result {
        width: 50%;
        height: 100%;
        border-radius: 2rem;
        justify-content: space-evenly;
        padding-top: 2rem;
        padding-bottom: 2rem;
    }

    .result-summary {
        height: 100%;
        width: 50%;
    }

    .your-result {
        width: 10rem;
        height: 10rem;
    }
}

